# FluxKart

./: .gitattributes  .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  load_test.js  prometheus.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 39a696bebe1d_add_preregistrations_table.py  5e2340f9f4d8_create_initial_tables.py  6689b0865305_add_outbox_events_table.py  7655698889d7_add_is_admin_to_users.py  cd5920ccf3d0_add_updated_at_to_reservations.py  e2ce7af2cabf_fix_reservation_unique_constraint.py
backend/app/: config.py  dependencies.py  main.py  telemetry.py
backend/app/consumers/: order_consumer.py
backend/app/middleware/: correlation_id.py  rate_limiter.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  auth.py  health.py  orders.py  reservations.py  sales.py
backend/app/services/: inventory_service.py  queue_service.py  reservation_service.py
backend/app/utils/: circuit_breaker.py  degradation.py  dlq_monitor.py  idempotency.py  metrics.py  security.py  user_score.py
backend/app/workers/: admission_worker.py  expiry_worker.py  heartbeat_worker.py  outbox_worker.py  reconciliation_worker.py
backend/consumers/: run_consumer.py
backend/k8s/: configmap.yaml  deploy.bat  namespace.yaml  secrets.yaml
backend/k8s/api/: deployment.yaml
backend/k8s/consumer/: deployment.yaml
backend/nginx/: nginx.conf
backend/pgbouncer/: pgbouncer.ini
backend/scripts/: create_test_users.py  generate_tokens.py  reset_sales.py  seed_data.py
(+33 files in other folders)
