[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fluxkart"
version = "0.1.0"
description = "Distributed Flash Sale & Inventory Reservation Engine"
requires-python = ">=3.12"

dependencies = [
  # Web framework
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",

  # Settings management
  "pydantic-settings==2.3.1",

  # PostgreSQL async driver (raw SQL, no ORM)
  "asyncpg==0.29.0",

  # Redis async client
  "redis==5.0.6",

  # RabbitMQ async client
  "aio-pika==9.4.1",

  # Database migrations
  "alembic==1.13.1",

  # Needed by alembic to connect to postgres for migrations
  "psycopg2-binary==2.9.9",

  # Structured logging
  "structlog==24.2.0",

  # Prometheus metrics
  "prometheus-fastapi-instrumentator==7.0.0",

  # HTTP client for testing
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
```

---

### File 5 of 8 — `requirements.txt`

This is used by Docker and deployment platforms. Open `requirements.txt` and paste:
```
fastapi==0.111.0
uvicorn[standard]==0.30.1
pydantic-settings==2.3.1
asyncpg==0.29.0
redis==5.0.6
aio-pika==9.4.1
alembic==1.13.1
psycopg2-binary==2.9.9
structlog==24.2.0
prometheus-fastapi-instrumentator==7.0.0
httpx==0.27.0
pytest==8.2.2
pytest-asyncio==0.23.7
pytest-cov==5.0.0